--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,73 +17,74 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".cn.youthlife.zhuoning.activity.LoginActivity"
+            android:name=".cn.youthlife.zhuoning.user_login.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:windowTranslucentNavigation="true"
             android:windowTranslucentStatus="true">
 
-
-        </activity>
-
-        <activity
-            android:name=".cn.youthlife.zhuoning.activity.DMActivateActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity
-            android:name=".cn.youthlife.zhuoning.activity.BaseActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".cn.youthlife.zhuoning.device_activate.DMActivateActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".cn.youthlife.zhuoning.base.BaseActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            >
+
         </activity>
         <activity
-            android:name=".cn.youthlife.zhuoning.activity.RegActivity"
+            android:name=".cn.youthlife.zhuoning.user_login.RegActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
-            android:name=".cn.youthlife.zhuoning.activity.ForgetPassActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
-
-        <activity
-            android:name=".cn.youthlife.zhuoning.activity.FeedbackActivity"
+            android:name=".cn.youthlife.zhuoning.user_login.ForgetPassActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
 
         <activity
-            android:name=".cn.youthlife.zhuoning.activity.MessageActivity"
+            android:name=".cn.youthlife.zhuoning.user_center.FeedbackActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
 
         <activity
-            android:name=".cn.youthlife.zhuoning.activity.ChangePassActivity"
+            android:name=".cn.youthlife.zhuoning.user_center.MessageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
+
+        <activity
+            android:name=".cn.youthlife.zhuoning.user_center.ChangePassActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
 
         <!--智能插座的控制界面-->
         <activity
-            android:name=".cn.youthlife.zhuoning.controller.PlugControllerActivity"
+            android:name=".cn.youthlife.zhuoning.device_controller.PlugControllerActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
         </activity>
         <!-- 饮水机的控制界面 -->
         <activity
-            android:name=".cn.youthlife.zhuoning.controller.DrinkControllerActivity"
+            android:name=".cn.youthlife.zhuoning.device_controller.DrinkControllerActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
 
         <!-- 电动窗帘的控制界面-->
         <activity
-            android:name=".cn.youthlife.zhuoning.controller.Curtain1ControllerActivity"
+            android:name=".cn.youthlife.zhuoning.device_controller.Curtain1ControllerActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
@@ -91,21 +92,19 @@
         </activity>
         <!-- 双窗帘页面-->
         <activity
-            android:name=".cn.youthlife.zhuoning.controller.Curtain2ControllerActivity"
+            android:name=".cn.youthlife.zhuoning.device_controller.Curtain2ControllerActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-
 
         </activity>
 
         <!--智能照明-->
         <activity
-            android:name=".cn.youthlife.zhuoning.controller.LightControllerActivity"
+            android:name=".cn.youthlife.zhuoning.device_controller.LightControllerActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-
-
         </activity>
+
 
 
     </application>
