--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--  -->
+    <!-- share wifi -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 
     <application
@@ -15,7 +15,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        >
         <activity
             android:name=".user_login.LoginActivity"
             android:label="@string/app_name"
@@ -32,11 +34,11 @@
         <activity
             android:name=".device_activate.DMActivateActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
             android:name=".base.BaseActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
             android:name=".user_login.RegActivity"
             android:screenOrientation="portrait"
@@ -82,7 +84,7 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
-        <!-- 激活页面 -->
+        <!-- device activate -->
         <activity
             android:name=".device_activate.device.LightActivateActivity"
             android:screenOrientation="portrait"
@@ -101,7 +103,7 @@
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
 
-        <!--activate device-->
+        <!--share wifi-->
         <activity
             android:name=".device_activate.result.ConnectSucceedActivity"
             android:screenOrientation="portrait"
