--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,9 @@ android {
 }
 
 dependencies {
-    //async http client
+    //android async http
     compile 'com.loopj.android:android-async-http:1.4.9'
-    //SwipeMenuListView
+    //swipe menu list view
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     //DrawerLayout animation
     compile files('libs/nineoldandroids-2.4.0.jar')
