--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,15 @@ apply plugin: 'me.tatarka.retrolambda'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-//19---->android 4.4
-//23---->android 6.0
+    //15---->android 4.0.3       android version >= 4.0.3
+    //19---->android 4.4
+    //23---->android 6.0
     defaultConfig {
         applicationId "zhuoning.youthlife.cn.zhuoning"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.1"
+        versionCode 4
+        versionName "1.3"
     }
 
     //add compileOptions for java 8 under Android
@@ -26,19 +27,20 @@ android {
 dependencies {
     //android async http
     compile 'com.loopj.android:android-async-http:1.4.9'
+    //http json response
+    compile 'com.google.code.gson:gson:2.4'
     //swipe menu list view
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     //DrawerLayout animation
     compile files('libs/nineoldandroids-2.4.0.jar')
     //BufferKnife
     compile 'com.jakewharton:butterknife:7.0.1'
-
-
+    //Bug HD    fir.im test
+    compile 'im.fir:fir-sdk:latest.integration@aar'
 
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    compile 'com.google.code.gson:gson:2.4'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 
 }
