--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "http://maven.bughd.com/public"
+        }
     }
 }
 
